Fixed multiple bugs on iOS
- Fixed scrolling issue
- Fixed tablet responsive layout
- Fixed lightbox appearance

--- a/app/styles/_base/_base.scss
+++ b/app/styles/_base/_base.scss
@@ -2,7 +2,7 @@
 $base-font-color: $judge-gray;
 $base-font-family: $proxima-light;
 $base-font-size: em(18);
-$base-background-color: $white;
+$base-background-color: $judge-gray;
 $action-color: $amber;
 $heading-font-family: $proxima-bold;
 $quote-font-family: $proxima-semibold;
