--- a/app/styles/_layouts/_footer.scss
+++ b/app/styles/_layouts/_footer.scss
@@ -8,6 +8,7 @@ footer {
 	padding: em(25) 0;
 	text-align: center;
 	position: relative;
+	z-index: 1;
 
 	.container {
 		@include media($bp-medium) {
