--- a/app/styles/_modules/_hero.scss
+++ b/app/styles/_modules/_hero.scss
@@ -5,6 +5,7 @@
 	$hero-background-color-overlay: rgba($amber, 0.7);
 
 	color: $hero-font-color;
+	background: $hero-background-color;
 	position: relative;
 	text-align: center;
 	z-index: 1;
@@ -80,7 +81,7 @@
 
 	&-content {
 		@include clearfix;
-		margin-bottom: 30%;
+		margin-bottom: 40%;
 
 		@include media($bp-medium) {
 			&:last-child {
@@ -168,9 +169,9 @@
 
 		h2 {
 			position: relative;
-			opacity: 0;
 
 			@include media($bp-medium) {
+				opacity: 0;
 				font-size: em(32);
 				margin-bottom: em(25);
 			}
@@ -256,30 +257,33 @@
 			}
 
 			.carousel-image {
-				opacity: 0;
+				height: em(220);
 
 				@include media($bp-medium) {
-					height: 30vh;
+					// height: 30vh;
+					opacity: 0;
 				}
 			}
 
 			h3 {
-				opacity: 0;
+
 				// @include media($bp-small-1) {
 				// 	font-size: em(16);
 				// }
 
 				@include media($bp-medium) {
 					font-size: em(20);
+					opacity: 0;
 				}
 			}
 
 			p {
-				opacity: 0;
+
 				// @include media($bp-small-1) {
 				// 	font-size: em(12);
 				// }
 				@include media($bp-medium) {
+					opacity: 0;
 					font-size: em(16);
 					line-height: 1.3em;
 					padding: 0 em(10);
